--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,14 +1,13 @@
-title: Your project name
-lang: en
-description: a catchy description for your project
+title: Read The Docs Jekyll Theme
+description: Port of the Read the Docs theme to Jekyll to use with GitHub Pages.
+remote_theme: carlosperate/jekyll-theme-rtd
 
-remote_theme: rundocs/jekyll-rtd-theme
-
-readme_index:
-  with_frontmatter: true
-
-exclude:
-  - Makefile
-  - CNAME
-  - Gemfile
-  - Gemfile.lock
+# Theme settings:
+site_author: Carlos Pereira Atencio
+repo_url: "https://github.com/carlosperate/jekyll-theme-rtd"
+edit_on_github: true
+github_docs_folder: true
+sticky_navigation: true
+prev_next_buttons_location: bottom
+search_enabled: true
+hljs_style: github-gist
