--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: 'UtMail docs'
-site_description: 'An intruductory website which aims to help you use or develop UtMail.'
-repo_url: 'https://github.com/SpeechlessMatt/UtMail'
+site_name: 'Read The Docs Jekyll Theme'
+site_description: 'Port of the Read the Docs theme to Jekyll to use with GitHub Pages.'
+repo_url: 'https://github.com/carlosperate/jekyll-theme-rtd'
 repo_name: 'GitHub'
 docs_dir: 'docs/'
 site_dir: '_site_mkdocs/'
