--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: 📫UtMail 临时邮箱-主页
+title: UtMail 临时邮箱-主页
 description: Port of the Read the Docs theme to Jekyll to use with GitHub Pages.
 remote_theme: carlosperate/jekyll-theme-rtd
 
